# HiParTI

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
benchmark/: CMakeLists.txt
benchmark/matrix/: CMakeLists.txt  blocksort-partition_mat.cpp  convert_hicoo_mat.cpp  sort_mat.cpp  spmm_csr_mat.cpp  spmm_hicoo_mat.cpp  spmm_hicoo_sks_mat.cpp  spmm_mat.cpp  spmv_hicoo_mat.cpp
benchmark/tensor/: CMakeLists.txt  convert_hicoo.cpp  convert_ssp.cpp  cpd.cpp  cpd_gpu.cu  cpd_hicoo.cpp  hicoo_utils.cpp  hicoo_utils.h  mttkrp.cpp  mttkrp_gpu.cu  mttkrp_hicoo.cpp  mttkrp_hicoo_matrixtiling.cpp  mttkrp_hicoo_reorder.cpp  mttkrp_hicoo_reorder_matrixtiling.cpp  mttkrp_reorder.cpp  reorder.cpp  smul.cpp  sort.cpp  sttm.cpp  ttm.cpp  ttm_reorder.cpp
csrk/: CMakeLists.txt  csrk.cpp  csrk.h  spmv.cpp
data/tensors/: 3D_12031.tns  test_eye_tensor.csr  test_eye_tensor_zb.tns  test_random.csr  test_symmetric2.csr  test_tensor.csr
include/: HiParTI.h  f2c.h  hicoo_utils2.h  msvc_i128.h  timer.h  windows_compat.h
include/includes/: error.h  helper_funcs.h  sptensors.h  types.h
src/: hicoo_utils2.cpp
src/helper_funcs/: error.cpp  timer.cpp  windows_compat.cpp
src/ktensor/: dump.cpp  ktensor.cpp  rankktensor.cpp
src/matrix/: dump.cpp  matrix.cpp  rankmatrix.cpp
src/spmatrix/: dump.cpp  load.cpp  mmio.cpp  relabel.cpp  status.cpp
src/spmatrix/csr/: dump.cpp  status.cpp
src/spmatrix/hicoo/: convert.cpp  dump.cpp  status.cpp
src/sptensor/: cpd.cpp  cpd_omp.cpp  dump.cpp  fromssp.cpp  khatri-rao.cpp  kronecker.cpp  load.cpp  mmul.cpp  mmul_omp.cpp  orderit.cpp  renumber.cpp  renumber.h  sort.cpp  split.cpp  sptensor.cpp  status.cpp  vmul.cpp
src/sptensor/hicoo/: convert.cpp  hicoo.cpp  mttkrp.cpp  mttkrp_omp.cpp  status.cpp
src/ssptensor/: fromsp.cpp  merge.cpp  mmul.cpp  sort.cpp  ssptensor.cpp
src/vector/: dump.cpp  vector.cpp
